# AIhackathon

./: .env.example  .gitignore  README.md  config.js  package-lock.json  package.json  pyproject.toml  run.py  server.js  tailwind.config.ts
.claude/: launch.json
app/: config.py  main.py
app/routers/: api.py  pages.py  webhooks.py
app/services/: bedrock.py  content.py  voice.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
docs/: SLIDE_DECK.md  SUBMISSION_DOCUMENT.md
public/: app.js  index.html  style.css
src/app/: page.tsx
src/app/api/generate-plan/: route.ts
src/app/api/search-content/: route.ts
src/app/api/voice/stt/: route.ts
src/app/api/webhook/whatsapp/: route.ts
src/components/: ContentCard.tsx  CoursePlan.tsx  Header.tsx
src/lib/: bedrock.ts  dynamodb.ts  i18n.ts  sarvam.ts  youtube.ts
src/types/: index.ts
